[build-system]
    requires = [
        "setuptools >= 47.0.0",
        "wheel"
    ]
build-backend = "setuptools.build_meta"

[tool.black]
    line-length = 88
    include = '\.pyi?$'
    exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/