[metadata]
name = hydrofunctions
version = attr: hydrofunctions.__version__
url = https://github.com/mroberge/hydrofunctions
project_urls =
    Documentation = https://hydrofunctions.readthedocs.io
    Source = https://github.com/mroberge/hydrofunctions
    Latest = https://github.com/mroberge/hydrofunctions/tree/develop
    Issue Tracker = https://github.com/mroberge/hydrofunctions/issues
author = Martin Roberge
author_email = mroberge@towson.edu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities
license = MIT license
description = A suite of convenience functions for exploring water data in a Jupyter Notebook
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = hydrofunctions hydrology USGS stream gauge water NWIS
copyright = Copyright 2016-2023 Martin Roberge and contributors

[options]
zip_safe = False
include_package_data = True
package_dir = 
    = src
packages = find:

install_requires = 
    importlib_metadata
    matplotlib
    numpy>=1.16.0
    pandas>=2
    requests
    IPython
    pyarrow

[options.packages.find]
where = src

[options.extras_require]
docs =
    nbsphinx
    pandoc
    Sphinx >= 1.4.4

dev = 
    nbsphinx
    pandoc
    Sphinx >= 1.4.4
    black
    build
    bumpversion >= 0.5.3
    coverage >= 4.1
    cryptography >= 1.4
    flake8 >= 2.6.0
    ipykernel
    pip >= 19.1.1
    pre-commit
    pytest
    pytest-cov
    PyYAML >= 3.11
    setuptools >= 47.0.0
    tox >= 2.3.1
    twine >= 1.11.0
    watchdog >= 0.8.3
    wheel >= 0.31.0

[flake8]
exclude = 
    docs
    tests
    .tox
max-line-length = 88
extend-ignore = E501
